--- a/HW12_mrn291/Assignment_2.ipynb
+++ b/HW12_mrn291/Assignment_2.ipynb
@@ -3515,6 +3515,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Figure showing the results of K-Means and Agglomerative Clustering for zip codes in NYC clustered by the total number of business establishments over a series of 20 years."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overall, it seems to have identified kind of similar clusters--it looks like both models consider the time series in zipcodes in the central business district a cluster, as well as (kind of) the zip codes out by JFK airport in Queens.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
